src/test/resources/Parser/SyntaxErrors/CyclicDelegate.front
class A:
    delegate * : a : A;